--- a/client/style.css
+++ b/client/style.css
@@ -701,6 +701,7 @@ html {
 }
 .hiddenNav{
     width: 0%;
+    overflow: hidden;
 }
 @media screen and (max-width: 600px) {
     .header{
@@ -774,18 +775,21 @@ html {
         font-size: 3vw;
         padding: 1vw;
     }
-    
+    .styleClass{
+        height: 80%;
+    }
     .swiper{
         margin: 0vw;
         width: 100%;
+        height: 50vh;
+    }
+    .swiper-wrapper{
+        height: 10vh;
     }
     .swiper-slide{
         margin: 0%;
         width: 100%;
-    }
-    .styleClass{
-        width: 100%;
-        height: 100%;
+        height: 10vh;
     }
     .CompanyTitle{
         font-size: 10vw;
@@ -813,10 +817,10 @@ html {
         height: auto;
     }
     .PaymentHeaderTitle{
-        font-size: 4vw;
+        font-size: 5vw;
     }
     .PaymentHeaderText{
-        font-size: 3vw;
+        font-size: 4vw;
     }
     .PaymentSwitchHolder{
         margin-top: 5vw;
